# system-monitor

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  grafana_dashboard_config.json  grafana_datasource.yml  main.c  prometheus_config.yml  start.sh  valgrind_test_results.txt
.github/workflows/: cmake-release.yml  make-release.yml
configs/: grafana_dashboard_config.json  grafana_dashboard_provider.yml  grafana_datasource.yml
include/: accumulator_queue.h  app_timer.h  metrics_exporter.h  monitor_metrics.h  signal_handler.h  socket_manager.h  stat_parser.h  thread_manager.h  usage_calculator.h  watchdog_timer.h
source/: accumulator_queue.c  app_timer.c  metrics_exporter.c  monitor_metrics.c  signal_handler.c  socket_manager.c  stat_parser.c  usage_calculator.c  watchdog_timer.c
source/threads/: accumulator_thread.c  export_thread.c  file_write_thread.c  watchdog_thread.c
